# flir_adk_multi

./: .gitignore  CMakeLists.txt  OusterCMDS.txt  README.md  nodelet_plugins.xml  package.xml  udev Ids.ods
flir_boson_usb-multi/launch/: flir_boson1.launch  flir_boson2.launch
flir_boson_usb-multi/scripts/: vid_stitchtest.py
include/flir_adk_multi/: BosonCamera.h
launch/: AllSensors.launch  cmds rosbag  flir_boson.launch  flir_boson1.launch  flir_boson2.launch  flir_boson3.launch  flir_boson4.launch  flir_boson5.launch  launch2.launch  launch3.launch  launch4.launch  launchAllCams.launch  launchCams.launch  ousterOnly.launch  ousterPlayback.launch
msg/: groundTruth.msg  groundTruthArray.msg  pingLatency.msg  pingStatus.msg  track1.msg  trackArray.msg  trackArray1.msg  trackArray2.msg  trackArrayCam.msg  trackArrayRdr.msg  trackCam.msg
scripts/: PlotAnnotateFile.py  RadarFusion1.py  RadarFusion2.py  StitchPano.py  StitchPanoAGC.py  StitchPano_matlab.py  diagnostics.py  dsrcTest.py  extractImages.py  gTruthToTrackFile.py  homographyTest1.py  homographyTest2.py  homographyTest3.py  homographyTest4.py  homographyTest5.py  homographyTest6.py  lidarGTruthtoFile.py  merge.py  plotSeq.txt  sensorFusion_v4.py  vid_stitch_cutoff.py  vid_stitch_overlap.py
scripts/jpda/: CamRadarF1.py  CamRadarF1_matlab.py  CamRadarF2.py  radarOnly1.py  utils.py  vscodeWs.code-workspace
scripts/matlab_eval/: SimBag2.txt  test.txt
scripts/mht_abhay/: mwis.py  realData_eval.py  sim_tracking2.py
src/: flir_boson_usb_node.cpp
src/nodelets/: BosonCamera.cpp
